fixed label class to remove strange spacing being caused in safari.

--- a/images/mgi.css
+++ b/images/mgi.css
@@ -12,7 +12,7 @@ select {color:#000000;font-family:Verdana,Arial,Helvetica;font-size:11px}
 
 /* Headers */
 .pageTitle {font-size:20px;font-family:Arial,Helvetica;vertical-align:middle;color:#000001;font-weight:bold;text-align:center;background-color:#D0E0F0}
-.label {font-size:12px;font-family:Arial,Helvetica;vertical-align:top;text-align:right;color:#000001;font-weight:bold;vertical-align:bottom}
+.label {font-size:12px;font-family:Arial,Helvetica;text-align:right;color:#000001;font-weight:bold;}
 td.headerLabel {font-size:12px;font-family:Arial,Helvetica;vertical-align:top;text-align:right;color:#000001;font-weight:bold;vertical-align:middle;text-align:center;background-color:#dddddd}
 td.headerLabelSmall {font-size:9px;font-family:Arial,Helvetica;vertical-align:top;text-align:right;color:#000001;font-weight:bold;vertical-align:middle;text-align:center;width:50;background-color:#dddddd}
 th  {font-size:12px;font-family:Arial,Helvetica;vertical-align:top;text-align:left;color:#000001;font-weight:bold;}
